--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -12,11 +12,16 @@ label {
   font-size: 12px;
 }
 
-textarea {
+textarea,
+trix-editor {
   width: 100%;
   margin: 8px 0px;
   padding: 8px 8px;
   min-height: 440px;
   resize: vertical;
   border: 1px solid #EBEBEB;
+	min-height: 20em;
+  max-height: 20em;
+  overflow-y: auto;
+
 }
