--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -20,8 +20,7 @@ trix-editor {
   min-height: 440px;
   resize: vertical;
   border: 1px solid #EBEBEB;
-	min-height: 20em;
-  max-height: 20em;
-  overflow-y: auto;
-
+	&.sm {
+		min-height: 160px;
+	}
 }
